# ai-notebooks

./: .gitignore  README.md  mnist_from_scratch.ipynb  mnist_pytorch.ipynb  pyproject.toml
