[tool.poetry]
name = "ai-notebooks"
version = "0.1.0"
description = "AI notebooks"
authors = ["Hannes Kimara <hanneskimara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
torch = "^1.9.0"
scikit-learn = "^0.24.2"
tqdm = "^4.62.0"
torchvision = "^0.10.0"
jupyterlab = "^3.1.4"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
